tests/workflow/positive/initial-self-loop.s
@initial
go(bool g) {
  if (g) { stay() }
  else { terminate() }
}
